Updated some styles and component names to get rid of warnings in the browser console; trying more ways of getting rid of whitespace; added the App class to the App component; corrected the reference to index.css in the index.js file so it matches the actual App.css file and *magically* my font styles went into full effect; refactored a couple class components to be functional components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,10 @@
 html, body {
   width: 100%;
   margin: 0;
-  overflow-x: hidden;
+}
+
+.App {
+  margin: 0;
 }
 
 a {
@@ -25,6 +28,7 @@ h1, h3 {
   font-family: 'Quicksand', sans-serif;
   font-size: 1.25rem;
   letter-spacing: .05rem;
+  margin: 0;
   --darkgray: #C4C4C4;
   --lightgray: #E5E5E5;
   --blue: #7CF4E6;
